--- a/team_card.html
+++ b/team_card.html
@@ -21,16 +21,16 @@
 						</div>
 						<form name="report" id="report" class="col-xs-12 topic-wrapper">
 							<ul class="col-xs-12 col-sm-8 topic-inner-wrapper">
-								<li class="col-xs-12 col-sm-10 enter-topic text-center">
+								<li class="col-xs-12 enter-topic text-center">
 									Choose your topic to precise your ticket<img src="images/enter-topic.png" alt="enter-topic">
 								</li>
-								<li class="col-xs-12 col-sm-10 topic-list text-center">
+								<li class="col-xs-12 topic-list text-center">
 									<input type="radio" name="topic-1" id="topic1"/>Game
 								</li>
-								<li class="col-xs-12 col-sm-10 topic-list text-center">
+								<li class="col-xs-12 topic-list text-center">
 									<input type="radio" name="topic-2" id="topic2"/>Player
 								</li>
-								<li class="col-xs-12 col-sm-10 topic-list text-center">
+								<li class="col-xs-12 topic-list text-center">
 									<input type="radio" name="topic-3" id="topic3"/>Tournament	
 								</li>
 							</ul>
@@ -117,6 +117,9 @@
 					</div>
 					<div class="col-xs-12 col-sm-4 col-sm-offset-8 report" data-toggle="modal" data-target="#reportMatchContainer"><input type="button" value="report match"/></div>
 				</form>
+				<div id="iconWrapper" class="col-xs-12 bottom-inner-wrapper text-center">
+					<img src="images/settings.gif">
+				</div>
 				<div class="col-xs-12 bottom-inner-wrapper">
 					<div class="col-xs-12 col-lg-6 players-wrapper">
 						<div class="col-sm-6">
