--- a/team_card.html
+++ b/team_card.html
@@ -118,7 +118,7 @@
 					<div class="col-xs-12 col-sm-4 col-sm-offset-8 report" data-toggle="modal" data-target="#reportMatchContainer"><input type="button" value="report match"/></div>
 				</form>
 				<div id="iconWrapper" class="col-xs-12 bottom-inner-wrapper text-center">
-					<img src="images/settings.gif">
+					<img src="images/file-empty.png" alt="empty file">
 				</div>
 				<div class="col-xs-12 bottom-inner-wrapper">
 					<div class="col-xs-12 col-lg-6 players-wrapper">
