--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 	</div>
 	<div id="alertBox" class="row alert fade in alert-box-wrapper">
 		<div id="alertBoxWrapper" class="row alert-box">
-			<img src="images/chat-white.png">
+			<img src="images/warning.png">
 			<p>alert</p>
 		</div>
 	</div>
@@ -1458,18 +1458,22 @@
 					<h2 class="col-xs-12 text-center">TEAM ID<span>(Team A)</span></h2>
 					<div class="col-xs-12">
 						<form name="check-players" id="checkPlayersForm" class="col-xs-12">
-							<p class="col-xs-12 col-sm-6 col-md-10 col-lg-8"><span>0/3</span>players are ready (Game ID)</p>
+							<p class="col-xs-12 col-sm-6 col-md-10 col-lg-8"><span>0/3</span>players are ready <i>(Game ID)</i></p>
 							<div class="col-xs-12">
 								<input type="checkbox" id="player1">
-								<label for="player1">Player 1 (Game ID)<span></span></label>
+								<label for="player1">Player 1 <i>(Game ID)</i><span></span></label>
 							</div>
 							<div class="col-xs-12">
 								<input type="checkbox" id="player2">
-								<label for="player2">Player 2 (Game ID)<span></span></label>
+								<label for="player2">Player 2 <i>(Game ID)</i><span></span></label>
 							</div>
 							<div class="col-xs-12">
 								<input type="checkbox" id="player3">
-								<label for="player3">Player 3 (Game ID)<span></span></label>
+								<label for="player3">Player 3 <i>(Game ID)</i><span></span></label>
+							</div>
+							<div class="col-xs-12">
+								<input type="checkbox" id="player4">
+								<label for="player4">Player 4 <span></span></label>
 							</div>
 							<input type="submit" name="accept-players" value="accept" class="col-xs-12 col-sm-4 col-lg-3 text-uppercase text-center">
 						</form>
@@ -1485,34 +1489,34 @@
 								<p class="col-xs-12 col-sm-6 col-md-10 col-lg-5 no-padding">Choose payment method</p>
 								<div class="col-xs-12 no-padding">
 									<input type="checkbox" id="eachPlayerPay">
-									<label for="eachPlayerPay"><span></span>Each palyer pays for himself (10 coins)</label>
+									<label for="eachPlayerPay"><span></span>Each palyer pays for himself <i>(10 coins)</i></label>
 								</div>
 								<div class="col-xs-12 no-padding">
 									<input type="checkbox" id="payForTeam">
-									<label for="payForTeam"><span></span>Pay for team (50 coins)</label>
+									<label for="payForTeam"><span></span>Pay for team <i>(50 coins)</i></label>
 								</div>
 							</div>
 							<div class="col-xs-12 no-padding">
-								<div id="gamePaymentTeam" class="col-sm-6 col-sm-offset-3 game-payment-team">
+								<div id="gamePaymentTeam" class="col-sm-6 col-sm-offset-4 game-payment-team">
 									<h4 class="col-xs-12">Team Amazing</h4>
-									<div class="col-xs-12">
-										<input type="checkbox" id="player1">
-										<label for="player1"><span></span>Player 1 (Game ID)</label>
+									<div class="col-xs-12 no-padding">
+										<input type="checkbox" id="player1" checked="true">
+										<label for="player1"><span></span>Player 1 <i>(Game ID)</i></label>
 									</div>
-									<div class="col-xs-12">
-										<input type="checkbox" id="player2">
-										<label for="player2"><span></span>Player 2 (Game ID)</label>
+									<div class="col-xs-12 no-padding">
+										<input type="checkbox" id="player2" checked="true">
+										<label for="player2"><span></span>Player 2 <i>(Game ID)</i></label>
 									</div>
-									<div class="col-xs-12">
-										<input type="checkbox" id="player3">
-										<label for="player3"><span></span>Player 3 (Game ID)</label>
+									<div class="col-xs-12 no-padding">
+										<input type="checkbox" id="player3" checked="true">
+										<label for="player3"><span></span>Player 3 <i>(Game ID)</i></label>
 									</div>
 								</div>							
 							</div>
 							<div class="col-xs-12 no-padding">
 								<div class="col-sm-6 col-sm-offset-3">
 									<input type="checkbox" id="acceptPaymentTerms">
-									<label for="acceptPaymentTerms" class="col-xs-12 col-sm-8">I accept terms of use and Privacy Policy<span></span></label>
+									<label for="acceptPaymentTerms" class="col-xs-12 col-sm-8 terms">I accept terms of use and Privacy Policy<span></span></label>
 								</div>
 							</div>
 							<div class="col-xs-12 no-padding">
@@ -1524,7 +1528,7 @@
 				</div>	
 			</div>
 			<div class="row top-row">
-				<ul>
+				<ul class="col-xs-12 col-sm-push-1">
 					<li id="gameLoginButton" class="col-xs-6 col-sm-2 checked" data-toggle="modal" data-target="#loginOnlyContainer">
 						<p>Login <span>(click here)</span><img src="images/check-mark.png" alt="check-mark"></p>
 					</li>
