--- a/team_card.html
+++ b/team_card.html
@@ -48,7 +48,7 @@
 					<form id="uploadMediaForm" class="col-xs-12">
 						<div class="col-xs-12">
 							<img src="images/upload-media.png" alt="upload media">
-							<input type="text" id="mediaUrl">
+							<input type="text" id="mediaUrl" placeholder="Insert URL adress">
 						</div>
 						<input type="submit" id="submitUploadMedia" value="accept" class="col-xs-12 col-sm-3">
 					</form>
