--- a/index.html
+++ b/index.html
@@ -1458,22 +1458,26 @@
 					<h2 class="col-xs-12 text-center">TEAM ID<span>(Team A)</span></h2>
 					<div class="col-xs-12">
 						<form name="check-players" id="checkPlayersForm" class="col-xs-12">
-							<p class="col-xs-12 col-sm-6 col-md-10 col-lg-8"><span>0/3</span>players are ready <i>(Game ID)</i></p>
+							<p class="col-xs-12 col-sm-6 col-md-10 col-lg-8"><span></span>players are ready <i>(Game ID)</i></p>
 							<div class="col-xs-12">
-								<input type="checkbox" id="player1">
+								<input type="checkbox" id="player1" data-gameId="true">
 								<label for="player1">Player 1 <i>(Game ID)</i><span></span></label>
 							</div>
 							<div class="col-xs-12">
-								<input type="checkbox" id="player2">
+								<input type="checkbox" id="player2" data-gameId="true">
 								<label for="player2">Player 2 <i>(Game ID)</i><span></span></label>
 							</div>
 							<div class="col-xs-12">
-								<input type="checkbox" id="player3">
+								<input type="checkbox" id="player3" data-gameId="true">
 								<label for="player3">Player 3 <i>(Game ID)</i><span></span></label>
 							</div>
 							<div class="col-xs-12">
-								<input type="checkbox" id="player4">
+								<input type="checkbox" id="player4" data-gameId="false">
 								<label for="player4">Player 4 <span></span></label>
+							</div>
+							<div class="col-xs-12">
+								<input type="checkbox" id="player5" data-gameId="true">
+								<label for="player5">Player 5 <i>(Game ID)</i><span></span></label>
 							</div>
 							<input type="submit" name="accept-players" value="accept" class="col-xs-12 col-sm-4 col-lg-3 text-uppercase text-center">
 						</form>
@@ -1489,7 +1493,7 @@
 								<p class="col-xs-12 col-sm-6 col-md-10 col-lg-5 no-padding">Choose payment method</p>
 								<div class="col-xs-12 no-padding">
 									<input type="checkbox" id="eachPlayerPay">
-									<label for="eachPlayerPay"><span></span>Each palyer pays for himself <i>(10 coins)</i></label>
+									<label for="eachPlayerPay"><span></span>Each player pays for himself <i>(10 coins)</i></label>
 								</div>
 								<div class="col-xs-12 no-padding">
 									<input type="checkbox" id="payForTeam">
