--- a/ladder.html
+++ b/ladder.html
@@ -147,7 +147,7 @@
 						</table>
 					</div>
 				</div>
-				<p class="col-xs-12 col-sm-6 col-lg-3 text-center">Quater-finals</p>
+				<p class="col-xs-12 col-sm-6 col-lg-3 text-center">Quarter-finals</p>
 				<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
 					<div class="ladder-box">
 						<a href="team_card.html">
