match card add teams

--- a/team_card.html
+++ b/team_card.html
@@ -148,6 +148,19 @@
 				</div>
 				<div class="col-xs-12 bottom-inner-wrapper bottom-players">
 					<div class="col-xs-12 col-lg-6 players-wrapper">
+						<h3 class="col-xs-12 col-md-10 col-lg-11 text-uppercase text-center">Team A</h3>
+						<div class="col-sm-6">
+							<div>
+								<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<p class="text-center">Player</p>
+							</div>
+						</div>
+						<div class="col-sm-6">
+							<div>
+								<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<p class="text-center">Player</p>
+							</div>
+						</div>
 						<div class="col-sm-6">
 							<div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
@@ -162,6 +175,7 @@
 						</div>
 					</div>
 					<div class="col-xs-12 col-lg-6 players-wrapper">
+						<h3 class="col-xs-12 col-md-10 col-lg-11 text-uppercase text-center">Team B</h3>
 						<div class="col-sm-6">
 							<div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
@@ -174,50 +188,6 @@
 								<p class="text-center">Player</p>
 							</div>
 						</div>
-					</div>
-					<div class="col-xs-12 col-lg-6 players-wrapper">
-						<div class="col-sm-6">
-							<div>
-								<img src="images/player-avatar.jpg" alt="player" class="game-img">
-								<p class="text-center">Player</p>
-							</div>
-						</div>
-						<div class="col-sm-6">
-							<div>
-								<img src="images/player-avatar.jpg" alt="player" class="game-img">
-								<p class="text-center">Player</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-12 col-lg-6 players-wrapper">
-						<div class="col-sm-6">
-							<div>
-								<img src="images/player-avatar.jpg" alt="player" class="game-img">
-								<p class="text-center">Player</p>
-							</div>
-						</div>
-						<div class="col-sm-6">
-							<div>
-								<img src="images/player-avatar.jpg" alt="player" class="game-img">
-								<p class="text-center">Player</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-12 col-lg-6 players-wrapper">
-						<div class="col-sm-6">
-							<div>
-								<img src="images/player-avatar.jpg" alt="player" class="game-img">
-								<p class="text-center">Player</p>
-							</div>
-						</div>
-						<div class="col-sm-6">
-							<div>
-								<img src="images/player-avatar.jpg" alt="player" class="game-img">
-								<p class="text-center">Player</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-12 col-lg-6 players-wrapper">
 						<div class="col-sm-6">
 							<div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
