--- a/ladder.html
+++ b/ladder.html
@@ -13,261 +13,530 @@
 <body>
 	<div id="content-wrapper">
 		<div id="content">
-			<div class="col-xs-12 col-sm-7 text-center match-info">
-				<p class="col-xs-12 col-sm-6 col-lg-4 text-center">Eight-finals</p>
-			</div>
-			<div class="col-xs-12 col-sm-7 ladder-main">	
-				<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
-					<div class="ladder-box">
-						<a href="team_card.html">
-							<div class="border-menu">
+			<div class="col-xs-12 col-sm-7 ladder-wrapper">
+				<ul class="col-xs-12 ladder-main">
+					<li>
+						<p class="col-xs-12 text-center">16th-finals</p>
+						<div class="col-xs-12 ladder-box-wrapper">
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
 							</div>
-						</a>
-						<table>
-							<tr>
-								<td><a href="#">Team A</a></td>
-								<td></td>
-							</tr>
-							<tr>
-								<td><a href="#">Team B</a></td>
-								<td></td>
-							</tr>
-						</table>
-					</div>
-					<div class="ladder-box">
-						<a href="team_card.html">
-							<div class="border-menu">
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
 							</div>
-						</a>
-						<table>
-							<tr>
-								<td><a href="#">Team A</a></td>
-								<td></td>
-							</tr>
-							<tr>
-								<td><a href="#">Team B</a></td>
-								<td></td>
-							</tr>
-						</table>
-					</div>
-					<div class="ladder-box">
-						<a href="team_card.html">
-							<div class="border-menu">
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
 							</div>
-						</a>
-						<table>
-							<tr>
-								<td><a href="#">Team A</a></td>
-								<td></td>
-							</tr>
-							<tr>
-								<td><a href="#">Team B</a></td>
-								<td></td>
-							</tr>
-						</table>
-					</div>
-					<div class="ladder-box">
-						<a href="team_card.html">
-							<div class="border-menu">
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
 							</div>
-						</a>
-						<table>
-							<tr>
-								<td><a href="#">Team A</a></td>
-								<td></td>
-							</tr>
-							<tr>
-								<td><a href="#">Team B</a></td>
-								<td></td>
-							</tr>
-						</table>
-					</div>
-					<div class="ladder-box">
-						<a href="team_card.html">
-							<div class="border-menu">
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
 							</div>
-						</a>
-						<table>
-							<tr>
-								<td><a href="#">Team A</a></td>
-								<td></td>
-							</tr>
-							<tr>
-								<td><a href="#">Team B</a></td>
-								<td></td>
-							</tr>
-						</table>
-					</div>
-					<div class="ladder-box">
-						<a href="team_card.html">
-							<div class="border-menu">
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
 							</div>
-						</a>
-						<table>
-							<tr>
-								<td><a href="#">Team A</a></td>
-								<td></td>
-							</tr>
-							<tr>
-								<td><a href="#">Team B</a></td>
-								<td></td>
-							</tr>
-						</table>
-					</div>
-					<div class="ladder-box">
-						<a href="team_card.html">
-							<div class="border-menu">
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
 							</div>
-						</a>
-						<table>
-							<tr>
-								<td><a href="#">Team A</a></td>
-								<td></td>
-							</tr>
-							<tr>
-								<td><a href="#">Team B</a></td>
-								<td></td>
-							</tr>
-						</table>
-					</div>
-					<div class="ladder-box">
-						<a href="team_card.html">
-							<div class="border-menu">
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
 							</div>
-						</a>
-						<table>
-							<tr>
-								<td><a href="#">Team A</a></td>
-								<td></td>
-							</tr>
-							<tr class="winner">
-								<td><a href="#">Team B</a></td>
-								<td></td>
-							</tr>
-						</table>
-					</div>
-				</div>
-				<p class="col-xs-12 col-sm-6 col-lg-3 text-center">Quarter-finals</p>
-				<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
-					<div class="ladder-box">
-						<a href="team_card.html">
-							<div class="border-menu">
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
 							</div>
-						</a>
-						<table>
-							<tr>
-								<td><a href="#">Team A</a></td>
-								<td></td>
-							</tr>
-							<tr>
-								<td><a href="#">Team B</a></td>
-								<td></td>
-							</tr>
-						</table>
-					</div>
-					<div class="ladder-box">
-						<a href="team_card.html">
-							<div class="border-menu">
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
 							</div>
-						</a>
-						<table>
-							<tr>
-								<td><a href="#">Team A</a></td>
-								<td></td>
-							</tr>
-							<tr>
-								<td><a href="#">Team B</a></td>
-								<td></td>
-							</tr>
-						</table>
-					</div>
-					<div class="ladder-box">
-						<a href="team_card.html">
-							<div class="border-menu">
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
 							</div>
-						</a>
-						<table>
-							<tr>
-								<td><a href="#">Team A</a></td>
-								<td></td>
-							</tr>
-							<tr>
-								<td><a href="#">Team B</a></td>
-								<td></td>
-							</tr>
-						</table>
-					</div>
-					<div class="ladder-box">
-						<a href="team_card.html">
-							<div class="border-menu">
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
 							</div>
-						</a>
-						<table>
-							<tr>
-								<td><a href="#">Team A</a></td>
-								<td></td>
-							</tr>
-							<tr class="winner">
-								<td><a href="#">Team B</a></td>
-								<td></td>
-							</tr>
-						</table>
-					</div>
-				</div>
-				<p class="col-xs-12 col-sm-7 col-lg-3 text-center">Semi-finals</p>
-				<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
-					<div class="ladder-box">
-						<a href="team_card.html">
-							<div class="border-menu">
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
 							</div>
-						</a>
-						<table>
-							<tr>
-								<td><a href="#">Team A</a></td>
-								<td></td>
-							</tr>
-							<tr>
-								<td><a href="#">Team B</a></td>
-								<td></td>
-							</tr>
-						</table>
-					</div>
-					<div class="ladder-box">
-						<a href="team_card.html">
-							<div class="border-menu">
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
 							</div>
-						</a>
-						<table>
-							<tr>
-								<td><a href="#">Team A</a></td>
-								<td></td>
-							</tr>
-							<tr class="winner">
-								<td><a href="#">Team B</a></td>
-								<td></td>
-							</tr>
-						</table>
-					</div>
-				</div>
-				<p class="col-xs-12 col-sm-6 col-lg-3 text-center">Final</p>
-				<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
-					<div class="ladder-box">
-						<a href="team_card.html">
-							<div class="border-menu">
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
 							</div>
-						</a>
-						<table>
-							<tr>
-								<td><a href="#">Team A</a></td>
-								<td></td>
-							</tr>
-							<tr class="winner">
-								<td><a href="#">Team B</a></td>
-								<td></td>
-							</tr>
-						</table>
-					</div>
-				</div>
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr class="winner">
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+						</div>
+					</li>
+					<li>
+						<p class="col-xs-12 text-center">Eight-finals</p>	
+						<div class="col-xs-12 ladder-box-wrapper">
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr class="winner">
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+						</div>
+					</li>
+					<li>	
+						<p class="col-xs-12 text-center">Quarter-finals</p>
+						<div class="col-xs-12 ladder-box-wrapper">
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr class="winner">
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+						</div>
+					</li>
+					<li>	
+						<p class="col-xs-12 text-center">Semi-finals</p>
+						<div class="col-xs-12 ladder-box-wrapper">
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr>
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr class="winner">
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+						</div>
+					</li>
+					<li>	
+						<p class="col-xs-12 text-center">Final</p>
+						<div class="col-xs-12 ladder-box-wrapper">
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr>
+										<td><a href="#">Team A</a></td>
+										<td></td>
+									</tr>
+									<tr class="winner">
+										<td><a href="#">Team B</a></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+						</div>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</div>
