progressbar evrywhere, deadline class

--- a/index.html
+++ b/index.html
@@ -1554,7 +1554,7 @@
 			<div class="row middle-row-games">
 				<p class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-2 col-md-offset-1 text-center middle-info"></p>
 				<p class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-3 col-md-offset-1 text-uppercase text-center">check in</p>
-				<p id="clock" class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-4 text-center middle-info"></p>
+				<div id="clock" class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-4 text-center middle-info"></div>
 			</div>
 			<div class="row bottom-row">
 				<nav class="col-xs-12 col-sm-1 text-center games-menu">
