--- a/team_card.html
+++ b/team_card.html
@@ -13,6 +13,19 @@
 <body>
 	<div id="content-wrapper">
 		<div id="content">
+			<div id="reportContainer" class="background-cover modal fade" role="dialog">
+				<div id="reportInnerWrapper" class="row report-wrapper modal-dialog">
+					<div class="col-xs-12">
+						<div class="col-xs-12 report-text-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta ex, excepturi! Eaque dolore, quibusdam dignissimos minima inventore totam animi, dicta vitae sequi eius, quo nesciunt veniam sint praesentium nisi tempora?
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus aperiam qui aut, expedita modi. Voluptas ut quaerat, nesciunt neque dolore facilis quo nulla impedit recusandae error aliquam perferendis commodi.
+						</div>
+						<form name="report-form" id="reportFrom" class="col-xs-12">
+							<textarea name="user-message" form="reportFrom" class="col-xs-12" placeholder="Write here..."></textarea>
+							<input type="submit" name="submit-report" value="send" class="col-xs-12 text-center">
+						</form>
+					</div>
+				</div>	
+			</div>
 			<div id="reportMatchContainer" class="background-cover modal fade" role="dialog">
 				<div id="reportMatchInnerWrapper" class="row report-match-wrapper modal-dialog">
 					<div class="col-xs-12 report-inner-wrapper">
@@ -132,11 +145,11 @@
 				<div class="col-xs-12 bottom-inner-wrapper">
 					<h3 class="col-xs-12 text-uppercase text-center">reports</h3>
 					<ul class="col-xs-12 report-list report-read">
-						<li><a href="#">PSC-Paul</a> wanst to join your clan<span data-toggle="modal" data-target="#requestReceivedContainer">read request</span>
+						<li><a href="#">PSC-Paul</a> wanst to join your clan<span data-toggle="modal" data-target="#reportContainer">read report</span>
 						</li>
-						<li><a href="#">Crazy Joe</a> wanst to join your clan<span data-toggle="modal" data-target="#requestReceivedContainer">read request</span>
+						<li><a href="#">Crazy Joe</a> wanst to join your clan<span data-toggle="modal" data-target="#reportContainer">read report</span>
 						</li>
-						<li><a href="#">Leonidas</a> wanst to join your clan<span data-toggle="modal" data-target="#requestReceivedContainer">read request</span>
+						<li><a href="#">Leonidas</a> wanst to join your clan<span data-toggle="modal" data-target="#reportContainer">read report</span>
 						</li>
 					</ul>
 				</div>
@@ -151,24 +164,40 @@
 						<h3 class="col-xs-12 col-md-10 col-lg-11 text-uppercase text-center">Team A</h3>
 						<div class="col-sm-6">
 							<div>
+								<div class="progress game-box-bar">
+									<span class="badge">30%</span>
+									<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+								</div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
 								<p class="text-center">Player</p>
 							</div>
 						</div>
 						<div class="col-sm-6">
 							<div>
+								<div class="progress game-box-bar">
+									<span class="badge">30%</span>
+									<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+								</div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
 								<p class="text-center">Player</p>
 							</div>
 						</div>
 						<div class="col-sm-6">
 							<div>
+								<div class="progress game-box-bar">
+									<span class="badge">30%</span>
+									<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+								</div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
 								<p class="text-center">Player</p>
 							</div>
 						</div>
 						<div class="col-sm-6">
 							<div>
+								<div class="progress game-box-bar">
+									<span class="badge">30%</span>
+									<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+								</div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
 								<p class="text-center">Player</p>
 							</div>
@@ -178,24 +207,40 @@
 						<h3 class="col-xs-12 col-md-10 col-lg-11 text-uppercase text-center">Team B</h3>
 						<div class="col-sm-6">
 							<div>
+								<div class="progress game-box-bar">
+									<span class="badge">30%</span>
+									<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+								</div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
 								<p class="text-center">Player</p>
 							</div>
 						</div>
 						<div class="col-sm-6">
 							<div>
+								<div class="progress game-box-bar">
+									<span class="badge">30%</span>
+									<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+								</div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
 								<p class="text-center">Player</p>
 							</div>
 						</div>
 						<div class="col-sm-6">
 							<div>
+								<div class="progress game-box-bar">
+									<span class="badge">30%</span>
+									<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+								</div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
 								<p class="text-center">Player</p>
 							</div>
 						</div>
 						<div class="col-sm-6">
 							<div>
+								<div class="progress game-box-bar">
+									<span class="badge">30%</span>
+									<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+								</div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
 								<p class="text-center">Player</p>
 							</div>
