--- a/teams.html
+++ b/teams.html
@@ -20,96 +20,160 @@
 				<div class="col-xs-12 team-inner-wrapper">
 					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
 						<div>
+							<div class="progress game-box-bar">
+								<span class="badge">30%</span>
+								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+							</div>
 							<img src="images/team-avatar.jpg" alt="team">
 							<p class="text-center">team</p>					
 						</div>
 					</div>
 					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
 						<div>
+							<div class="progress game-box-bar">
+								<span class="badge">30%</span>
+								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+							</div>
 							<img src="images/team-avatar.jpg" alt="team">
 							<p class="text-center">team</p>					
 						</div>
 					</div>
 					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
 						<div>
+							<div class="progress game-box-bar">
+								<span class="badge">30%</span>
+								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+							</div>
 							<img src="images/team-avatar.jpg" alt="team">
 							<p class="text-center">team</p>					
 						</div>
 					</div>
 					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
 						<div>
+							<div class="progress game-box-bar">
+								<span class="badge">30%</span>
+								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+							</div>
 							<img src="images/team-avatar.jpg" alt="team">
 							<p class="text-center">team</p>					
 						</div>
 					</div>
 					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
 						<div>
+							<div class="progress game-box-bar">
+								<span class="badge">30%</span>
+								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+							</div>
 							<img src="images/team-avatar.jpg" alt="team">
 							<p class="text-center">team</p>					
 						</div>
 					</div>
 					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
 						<div>
+							<div class="progress game-box-bar">
+								<span class="badge">30%</span>
+								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+							</div>
 							<img src="images/team-avatar.jpg" alt="team">
 							<p class="text-center">team</p>					
 						</div>
 					</div>
 					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
 						<div>
+							<div class="progress game-box-bar">
+								<span class="badge">30%</span>
+								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+							</div>
 							<img src="images/team-avatar.jpg" alt="team">
 							<p class="text-center">team</p>					
 						</div>
 					</div>
 					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
 						<div>
+							<div class="progress game-box-bar">
+								<span class="badge">30%</span>
+								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+							</div>
 							<img src="images/team-avatar.jpg" alt="team">
 							<p class="text-center">team</p>					
 						</div>
 					</div>
 					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
 						<div>
+							<div class="progress game-box-bar">
+								<span class="badge">30%</span>
+								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+							</div>
 							<img src="images/team-avatar.jpg" alt="team">
 							<p class="text-center">team</p>					
 						</div>
 					</div>
 					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
 						<div>
+							<div class="progress game-box-bar">
+								<span class="badge">30%</span>
+								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+							</div>
 							<img src="images/team-avatar.jpg" alt="team">
 							<p class="text-center">team</p>					
 						</div>
 					</div>
 					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
 						<div>
+							<div class="progress game-box-bar">
+								<span class="badge">30%</span>
+								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+							</div>
 							<img src="images/team-avatar.jpg" alt="team">
 							<p class="text-center">team</p>					
 						</div>
 					</div>
 					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
 						<div>
+							<div class="progress game-box-bar">
+								<span class="badge">30%</span>
+								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+							</div>
 							<img src="images/team-avatar.jpg" alt="team">
 							<p class="text-center">team</p>					
 						</div>
 					</div>
 					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
 						<div>
+							<div class="progress game-box-bar">
+								<span class="badge">30%</span>
+								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+							</div>
 							<img src="images/team-avatar.jpg" alt="team">
 							<p class="text-center">team</p>					
 						</div>
 					</div>
 					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
 						<div>
+							<div class="progress game-box-bar">
+								<span class="badge">30%</span>
+								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+							</div>
 							<img src="images/team-avatar.jpg" alt="team">
 							<p class="text-center">team</p>					
 						</div>
 					</div>
 					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
 						<div>
+							<div class="progress game-box-bar">
+								<span class="badge">30%</span>
+								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+							</div>
 							<img src="images/team-avatar.jpg" alt="team">
 							<p class="text-center">team</p>					
 						</div>
 					</div>
 					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
 						<div>
+							<div class="progress game-box-bar">
+								<span class="badge">30%</span>
+								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%"></div>
+							</div>
 							<img src="images/team-avatar.jpg" alt="team">
 							<p class="text-center">team</p>					
 						</div>
