ladder hover system

--- a/ladder.html
+++ b/ladder.html
@@ -24,11 +24,27 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="Masters">
+										<td><a href="#">Masters</a></td>
+										<td></td>
+									</tr>
+									<tr data-name="Loosers">
+										<td><a href="#">Loosers</a></td>
+										<td></td>
+									</tr>
+								</table>
+							</div>
+							<div class="ladder-box">
+								<a href="team_card.html">
+									<div class="border-menu">
+									</div>
+								</a>
+								<table>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -40,11 +56,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -56,11 +72,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -72,11 +88,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -88,11 +104,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -104,11 +120,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -120,11 +136,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -136,11 +152,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -152,11 +168,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -168,11 +184,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -184,11 +200,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -200,11 +216,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -216,11 +232,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -232,11 +248,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -248,28 +264,12 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
-										<td><a href="#">Team B</a></td>
-										<td></td>
-									</tr>
-								</table>
-							</div>
-							<div class="ladder-box">
-								<a href="team_card.html">
-									<div class="border-menu">
-									</div>
-								</a>
-								<table>
-									<tr>
-										<td><a href="#">Team A</a></td>
-										<td></td>
-									</tr>
-									<tr class="winner">
-										<td><a href="#">Team B</a></td>
+									<tr data-name="Big Band">
+										<td><a href="#">Big Band</a></td>
 										<td></td>
 									</tr>
 								</table>
@@ -285,11 +285,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
-										<td><a href="#">Team A</a></td>
+									<tr data-name="Masters">
+										<td><a href="#">Masters</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -301,11 +301,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -317,11 +317,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -333,11 +333,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -349,11 +349,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -365,11 +365,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -381,11 +381,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -397,12 +397,12 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr class="winner">
-										<td><a href="#">Team B</a></td>
+									<tr data-name="Big Band">
+										<td><a href="#">Big Band</a></td>
 										<td></td>
 									</tr>
 								</table>
@@ -418,11 +418,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
-										<td><a href="#">Team A</a></td>
+									<tr data-name="Masters">
+										<td><a href="#">Masters</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -434,11 +434,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -450,11 +450,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -466,12 +466,12 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr class="winner">
-										<td><a href="#">Team B</a></td>
+									<tr data-name="Big Band">
+										<td><a href="#">Big Band</a></td>
 										<td></td>
 									</tr>
 								</table>
@@ -487,11 +487,11 @@
 									</div>
 								</a>
 								<table>
-									<tr>
-										<td><a href="#">Team A</a></td>
+									<tr data-name="Masters">
+										<td><a href="#">Masters</a></td>
 										<td></td>
 									</tr>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team B</a></td>
 										<td></td>
 									</tr>
@@ -503,12 +503,12 @@
 									</div>
 								</a>
 								<table>
-									<tr>
+									<tr data-name="">
 										<td><a href="#">Team A</a></td>
 										<td></td>
 									</tr>
-									<tr class="winner">
-										<td><a href="#">Team B</a></td>
+									<tr data-name="Big Band">
+										<td><a href="#">Big Band</a></td>
 										<td></td>
 									</tr>
 								</table>
@@ -524,12 +524,12 @@
 									</div>
 								</a>
 								<table>
-									<tr>
-										<td><a href="#">Team A</a></td>
+									<tr data-name="Masters">
+										<td><a href="#">Masters</a></td>
 										<td></td>
 									</tr>
-									<tr class="winner">
-										<td><a href="#">Team B</a></td>
+									<tr data-name="Big Band">
+										<td><a href="#">Big Band</a></td>
 										<td></td>
 									</tr>
 								</table>
